RESOLVED FIXED 85772
[chromium] REGRESSION(r107389) Visible line artifacts on some JPEG images
https://bugs.webkit.org/show_bug.cgi?id=85772
Summary [chromium] REGRESSION(r107389) Visible line artifacts on some JPEG images
noel gordon
Reported 2012-05-06 22:14:50 PDT
Created attachment 140473 [details] chrome-20.0.1123.4-jpeg-artifacts.png http://www.polepositiongroup.com/img/banners/bg_006.jpg image shows visible horizontal and vertical line artifacts. Chrome 20.0.1124.4 zoomed in image capture attached, shows clear vertical lines artifacts.
Attachments
chrome-20.0.1123.4-jpeg-artifacts.png (563.34 KB, image/png)
2012-05-06 22:14 PDT, noel gordon
no flags
firefox-12.0-jpeg-artifacts.png (158.05 KB, image/png)
2012-05-06 22:17 PDT, noel gordon
no flags
firefox-9.0-jpeg.png (187.13 KB, image/png)
2012-05-06 22:35 PDT, noel gordon
no flags
Patch (10.54 KB, patch)
2012-05-10 00:33 PDT, noel gordon
no flags
Patch (11.41 KB, patch)
2012-05-10 01:29 PDT, noel gordon
no flags
Patch for landing (11.67 KB, patch)
2012-05-10 02:44 PDT, noel gordon
no flags
noel gordon
Comment 1 2012-05-06 22:17:31 PDT
Created attachment 140474 [details] firefox-12.0-jpeg-artifacts.png
noel gordon
Comment 2 2012-05-06 22:22:23 PDT
Compared Firefox 12.0 Mac rendering, I see the same vertical & horizontal artifacts (picture above). I _don't_ see the artifacts using Firefox 9.0 Mac, so the issue seems to be a regression in libjpeg-turbo that manifests in both Firefox 12, and Chrome 20 http://crbug.com/122951
noel gordon
Comment 3 2012-05-06 22:35:39 PDT
Created attachment 140477 [details] firefox-9.0-jpeg.png No artifacts show up on Firefox 9.0 Mac.
noel gordon
Comment 4 2012-05-08 22:16:55 PDT
noel gordon
Comment 5 2012-05-09 23:26:07 PDT
Looked at Firefox 12.0 again today and I don't see artifacts. Firefox 9.0, 12.0 render fine.
noel gordon
Comment 6 2012-05-10 00:30:12 PDT
Next punt IFAST vs ISLOW DCT decodes. No artifacts with ISLOW, so backing that out, patch coming ...
noel gordon
Comment 7 2012-05-10 00:33:34 PDT
Kent Tamura
Comment 8 2012-05-10 00:42:58 PDT
Comment on attachment 141100 [details] Patch rubber-stamped.
noel gordon
Comment 9 2012-05-10 00:55:35 PDT
Thank you, and a question: do rebaselines seem slow from your location?
Kent Tamura
Comment 10 2012-05-10 00:57:43 PDT
(In reply to comment #9) > Thank you, and a question: do rebaselines seem slow from your location? Both of "webkit-patch rebaseline-expectatinos" and garden-o-matic are very slow in Tokyo.
noel gordon
Comment 11 2012-05-10 01:03:37 PDT
Same from Sydney. Over the last three weeks (it seems to me) these tools became noticeably slower.
Eric Seidel (no email)
Comment 12 2012-05-10 01:08:59 PDT
You might try running with -v, to see what those tools are doing. I'm not pariticularly famiiliar with either.
noel gordon
Comment 13 2012-05-10 01:18:36 PDT
Good idea.
noel gordon
Comment 14 2012-05-10 01:20:03 PDT
(In reply to comment #8) > (From update of attachment 141100 [details]) > rubber-stamped. Need to add = IMAGE expectations for some additional tests fast/repaint/block-layout-inline-children-replaced.html tables/mozilla_expected_failures/bugs/bug85016.html
noel gordon
Comment 15 2012-05-10 01:29:20 PDT
noel gordon
Comment 16 2012-05-10 01:38:51 PDT
(In reply to comment #4) > Filed a mozilla bug: https://bugzilla.mozilla.org/show_bug.cgi?id=753235 Closed.
noel gordon
Comment 17 2012-05-10 02:44:19 PDT
Created attachment 141120 [details] Patch for landing
WebKit Review Bot
Comment 18 2012-05-10 06:15:06 PDT
Comment on attachment 141120 [details] Patch for landing Clearing flags on attachment: 141120 Committed r116636: <http://trac.webkit.org/changeset/116636>
WebKit Review Bot
Comment 19 2012-05-10 06:15:15 PDT
All reviewed patches have been landed. Closing bug.
noel gordon
Comment 20 2012-05-10 20:55:27 PDT
(In reply to comment #12) > You might try running with -v, to see what those tools are doing. I'm not pariticularly famiiliar with either. Filed bug 86171 with a -v trace of a rebaseline of one test: total time was 21m 14sec :/
Note You need to log in before you can comment on or make changes to this bug.