Source/WebCore: [chromium] REGRESSION(r107389) Visible line artifacts on some JPEG images https://bugs.webkit.org/show_bug.cgi?id=85772

Reviewed by Kent Tamura.

On some JPEG images, vertical and horizontal lines artifacts might appear in image
regions with very high frequency color variation when using DCT_IFAST decodes. Use
DCT_IFAST on small screen devices only (Chromium Android).

No new tests. Covered by existing tests.

* platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(dctMethod): Permit DCT_IFAST decoding for Chromium Android only.

LayoutTests: [chromium] REGRESSION(r107389) Visible line artifacts on JPEG images
https://bugs.webkit.org/show_bug.cgi?id=85772

Reviewed by Kent Tamura.

* platform/chromium/test_expectations.txt: Add IMAGE expectations.


Canonical link: https://commits.webkit.org/103679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116636 268f45cc-cd09-0410-ab3c-d52691b4dbfc